--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^9.0.0",
+    "compression-webpack-plugin": "^4.0.1",
     "craco-less": "^1.20.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
@@ -48,9 +48,11 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
-    "simple-progress-webpack-plugin": "^2.0.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpackbar": "^5.0.2"
   },
   "scripts": {
     "start:mocker": "cross-env port=4000 cross-env MOCKER_ENV=true craco start",
