--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.3.2",
-    "antd": "^4.16.13",
+    "antd": "^4.17.0-alpha.10",
     "rc-scrollbars": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
